# Ising_model_DNA

./: CMakeLists.txt  DNA_sequence.txt  Input_Output.cpp  Input_Output.h  Ising_Procedure.cpp  Ising_Procedure.h  README.md  image.cpp  image.h  input_DNA_sequence.txt  main.cpp  output_DNA_sequence.txt  utility.cpp  utility.h
